--- a/package.json
+++ b/package.json
@@ -55,9 +55,7 @@
   },
   "workspaces": [
     "packages/storybook",
-    "packages/pro/saas-ui/*",
     "packages/saas-ui-*",
-    "apps/*",
     "tooling/next-workspaces",
     "tooling/test-utils",
     "tooling/props-docs",
@@ -113,5 +111,8 @@
   "resolutions": {
     "unist-util-visit": "4.0.0"
   },
-  "packageManager": "yarn@3.3.0"
+  "packageManager": "yarn@3.3.0",
+  "dependencies": {
+    "lost-pixel": "^3.3.0"
+  }
 }
