--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.1-next.7",
   "scripts": {
     "dev": "sb dev -p 6006",
-    "build": "sb build --debug --loglevel verbose && sb extract"
+    "build": "sb build --debug --loglevel verbose"
   },
   "dependencies": {
     "@babel/core": "^7.21.4",
@@ -17,20 +17,20 @@
     "@emotion/styled": "^11.10.6",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/storybook-addon": "workspace:*",
-    "@storybook/addon-a11y": "^7.0.2",
-    "@storybook/addon-storysource": "^7.0.2",
-    "@storybook/addon-toolbars": "^7.0.2",
-    "@storybook/addon-viewport": "^7.0.2",
-    "@storybook/addons": "^7.0.2",
-    "@storybook/cli": "^7.0.2",
-    "@storybook/client-api": "^7.0.2",
+    "@storybook/addon-a11y": "^7.0.5",
+    "@storybook/addon-storysource": "^7.0.5",
+    "@storybook/addon-toolbars": "^7.0.5",
+    "@storybook/addon-viewport": "^7.0.5",
+    "@storybook/addons": "^7.0.5",
+    "@storybook/cli": "^7.0.5",
+    "@storybook/client-api": "^7.0.5",
     "@storybook/client-logger": "7.0.2",
     "@storybook/preview-api": "7.0.2",
-    "@storybook/preview-web": "^7.0.2",
-    "@storybook/react": "^7.0.2",
-    "@storybook/react-vite": "^7.0.2",
+    "@storybook/preview-web": "^7.0.5",
+    "@storybook/react": "^7.0.5",
+    "@storybook/react-vite": "^7.0.5",
     "@storybook/testing-react": "^2.0.0",
-    "@storybook/types": "^7.0.2",
+    "@storybook/types": "^7.0.5",
     "@swc/core": "^1.3.46",
     "framer-motion": "^10.10.0",
     "react": "^18.2.0",
