--- a/packages/saas-ui-command-bar/package.json
+++ b/packages/saas-ui-command-bar/package.json
@@ -7,7 +7,7 @@
     ".": {
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.modern.mjs"
+      "import": "./dist/index.mjs"
     },
     "./src": {
       "default": "./src/index.ts"
