--- a/package.json
+++ b/package.json
@@ -66,38 +66,38 @@
     "tooling/storybook-addon"
   ],
   "devDependencies": {
-    "@chakra-ui/cli": "^2.3.1",
-    "@chakra-ui/react": "^2.5.5",
-    "@changesets/cli": "^2.25.2",
+    "@chakra-ui/cli": "^2.4.1",
+    "@chakra-ui/react": "^2.6.1",
+    "@changesets/cli": "^2.26.1",
     "@clerk/clerk-react": "^3.5.1",
-    "@emotion/jest": "^11.10.5",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/jest": "^11.11.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@jest/types": "^29.5.0",
     "@manypkg/get-packages": "^1.1.3",
-    "@swc-node/jest": "^1.6.3",
-    "@swc/core": "^1.3.46",
-    "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@swc-node/jest": "^1.6.5",
+    "@swc/core": "^1.3.59",
+    "@types/node": "^18.16.13",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "browserslist": "^4.21.5",
     "cross-env": "^7.0.3",
-    "date-fns": "^2.29.3",
-    "eslint": "^8.37.0",
+    "date-fns": "^2.30.0",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.4",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-storybook": "^0.6.11",
-    "framer-motion": "^10.10.0",
+    "eslint-plugin-storybook": "^0.6.12",
+    "framer-motion": "^10.12.12",
     "husky": "^8.0.3",
     "hygen": "^6.2.11",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-watch-typeahead": "^2.2.2",
-    "lint-staged": "^13.2.0",
+    "lint-staged": "^13.2.2",
     "lodash": "^4.17.21",
     "node-releases": "^2.0.10",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -106,15 +106,15 @@
     "rimraf": "^4.4.1",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
-    "turbo": "^1.8.8",
+    "turbo": "^1.9.8",
     "typescript": "^5.0.4",
     "vercel-submodules": "^1.0.10",
-    "yup": "^1.0.2",
+    "yup": "^1.1.1",
     "zod": "^3.21.4"
   },
   "resolutions": {
     "unist-util-visit": "4.0.0",
-    "next": "13.3.2-canary.11"
+    "react": "18.2.0"
   },
   "packageManager": "yarn@3.3.0",
   "dependencies": {
