--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "build:storybook": "yarn w saas-ui-storybook build",
     "prepare": "husky install",
     "clean": "turbo run clean",
-    "test": "jest --maxWorkers=50%",
-    "test:watch": "jest --maxWorkers=25% --watch --onlyChanged",
-    "test:ci": "jest --color --runInBand --ci",
+    "test": "vitest",
+    "test:watch": "vitest --watch --onlyChanged",
+    "test:ci": "vitest --color --runInBand --ci",
     "lint": "turbo run lint",
     "lint:staged": "lint-staged --allow-empty --config lint-staged.config.js",
     "create:pkg": "hygen package chakra-component",
@@ -70,12 +70,9 @@
     "@chakra-ui/react": "^2.6.1",
     "@changesets/cli": "^2.26.1",
     "@clerk/clerk-react": "^3.5.1",
-    "@emotion/jest": "^11.11.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@jest/types": "^29.5.0",
     "@manypkg/get-packages": "^1.1.3",
-    "@swc-node/jest": "^1.6.5",
     "@swc/core": "^1.3.59",
     "@types/node": "^18.16.13",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
@@ -91,9 +88,7 @@
     "framer-motion": "^10.12.12",
     "husky": "^8.0.3",
     "hygen": "^6.2.11",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-watch-typeahead": "^2.2.2",
+    "jsdom": "^22.1.0",
     "lint-staged": "^13.2.2",
     "lodash": "^4.17.21",
     "node-releases": "^2.0.10",
@@ -116,5 +111,9 @@
     "unist-util-visit": "4.0.0",
     "react": "18.2.0"
   },
-  "packageManager": "yarn@3.3.0"
+  "packageManager": "yarn@3.3.0",
+  "dependencies": {
+    "@storybook/testing-react": "^2.0.1",
+    "vitest": "^0.32.0"
+  }
 }
