--- a/packages/saas-ui-forms/zod/package.json
+++ b/packages/saas-ui-forms/zod/package.json
@@ -19,6 +19,7 @@
   "author": "Eelco Wiersma <eelco@appulse.nl>",
   "license": "MIT",
   "peerDependencies": {
+    "@saas-ui/modals": "*",
     "@chakra-ui/utils": "^2.0.14",
     "@hookform/resolvers": "^3.0.0",
     "react-hook-form": "^7.43.9",
